# nrf9160_cryptocell_demo

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
bindings/: bindings_cc310_bl.h
src/: bl_cc310.rs  main.rs  wraper_bl_cc310.rs
